Add uml overview

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
     "doctrine:init": "composer doctrine:drop && composer doctrine:create && composer doctrine:update",
     "test": "composer doctrine:init && composer test:phpunit",
     "get-plantuml": "[ -f /vendore/bin/plantuml.jar ] || wget http://downloads.sourceforge.net/project/plantuml/plantuml.jar -q -O vendor/bin/plantuml.jar",
+    "generate-uml" : [
+
+    ],
     "post-install-cmd": [
         "@get-plantuml"
     ]
