--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 install:
   #composer install
 script:
-  - phpunit -c phpunit.xml --debug --verbose --exclude-group online
+  - phpunit -c phpunit.xml --debug --verbose --exclude-group online --coverage-text
   #- php php-cs-fixer.phar fix --no-interaction --dry-run --diff -vvv ./
 
 notifications:
