--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require-dev": {
     "symfony/symfony"                       : "3.1.*",
-    "phpunit/phpunit"                       : "4.7.*@dev",
+    "phpunit/phpunit"                       : "~5.2",
     "behat/symfony2-extension"              : "~2.0",
     "symfony/var-dumper"                    : "~2.7",
     "fzaninotto/faker"                      : "~1.4",
