--- a/build.xml
+++ b/build.xml
@@ -31,11 +31,11 @@
     <property name="phpunit" value="${basedir}/vendor/bin/phpunit"/> -->
 
     <target name="full-build"
-            depends="prepare,static-analysis,phpunit,phpdox,-check-failure"
+            depends="prepare,static-analysis,phpunit,phpdox,remove-vendors,-check-failure"
             description="Performs static analysis, runs the tests, and generates project documentation"/>
 
     <target name="full-build-parallel"
-            depends="prepare,static-analysis-parallel,phpunit,phpdox,-check-failure"
+            depends="prepare,static-analysis-parallel,phpunit,phpdox,remove-vendors,-check-failure"
             description="Performs static analysis (executing the tools in parallel), runs the tests, and generates project documentation"/>
 
     <target name="quick-build"
@@ -277,6 +277,11 @@
                 </not>
             </condition>
         </fail>
+    </target>
+
+    <target name="remove-vendors"
+            description="Cleanup vendor libraries">
+        <delete dir="${basedir}/Tests/vendor"/>
     </target>
 </project>
 
