--- a/build.xml
+++ b/build.xml
@@ -1,34 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="name-of-project" default="full-build-parallel">
     <!-- By default, we assume all tools to be on the $PATH -->
-    <property name="pdepend" value="/usr/sbin/pdepend"/>
-    <property name="phpcpd"  value="/usr/sbin/phpcpd"/>
-    <property name="phpcs"   value="/usr/bin/phpcs"/>
-    <property name="phpdox"  value="/usr/sbin/phpdox"/>
-    <property name="phploc"  value="/usr/sbin/phploc"/>
-    <property name="phpmd"   value="/usr/sbin/phpmd"/>
+    <property name="pdepend" value="Tests/vendor/bin/pdepend"/>
+    <property name="phpcpd"  value="Tests/vendor/bin/phpcpd"/>
+    <property name="phpcs"   value="Tests/vendor/bin/phpcs"/>
+    <property name="phpdox"  value="/Tests/vendor/bin/phpdox"/>
+    <property name="phploc"  value="Tests/vendor/bin/phploc"/>
+    <property name="phpmd"   value="Tests/vendor/bin/phpmd"/>
     <property name="phpunit" value="Tests/vendor/bin/phpunit"/>
     <property name="composer" value="/usr/bin/composer"/>
     <property name="appDirectories" value="${basedir}/Command,${basedir}/DependencyInjection,${basedir}/Entity,${basedir}/Event,${basedir}/Exception,${basedir}/Provider,${basedir}/Serializer,${basedir}/Traits,${basedir}/Utils"/>
     <property name="appDirectoriesSpace" value="${basedir}/Command/ ${basedir}/DependencyInjection/ ${basedir}/Entity/ ${basedir}/Event/ ${basedir}/Exception/ ${basedir}/Provider/ ${basedir}/Serializer/ ${basedir}/Traits/ ${basedir}/Utils/"/>
-
-    <!-- Use this when the tools are located as PHARs in ${basedir}/build/tools
-    <property name="pdepend" value="${basedir}/build/tools/pdepend.phar"/>
-    <property name="phpcpd"  value="${basedir}/build/tools/phpcpd.phar"/>
-    <property name="phpcs"   value="${basedir}/build/tools/phpcs.phar"/>
-    <property name="phpdox"  value="${basedir}/build/tools/phpdox.phar"/>
-    <property name="phploc"  value="${basedir}/build/tools/phploc.phar"/>
-    <property name="phpmd"   value="${basedir}/build/tools/phpmd.phar"/>
-    <property name="phpunit" value="${basedir}/build/tools/phpunit.phar"/> -->
-
-    <!-- Use this when the tools are managed by Composer in ${basedir}/vendor/bin
-    <property name="pdepend" value="${basedir}/vendor/bin/pdepend"/>
-    <property name="phpcpd"  value="${basedir}/vendor/bin/phpcpd"/>
-    <property name="phpcs"   value="${basedir}/vendor/bin/phpcs"/>
-    <property name="phpdox"  value="${basedir}/vendor/bin/phpdox"/>
-    <property name="phploc"  value="${basedir}/vendor/bin/phploc"/>
-    <property name="phpmd"   value="${basedir}/vendor/bin/phpmd"/>
-    <property name="phpunit" value="${basedir}/vendor/bin/phpunit"/> -->
 
     <target name="full-build"
             depends="prepare,static-analysis,phpunit,phpdox,-check-failure"
@@ -80,6 +62,20 @@
             <arg value="--prefer-dist"/>
         </exec>
         <property name="composer.done" value="true"/>
+    </target>
+
+    <target name="install-deps"
+            description="Composer install">
+        <exec executable="${composer}">
+            <arg value="require"/>
+            <arg value="--dev"/>
+            <arg value="pdepend/pdepend"/>
+            <arg value="sebastian/phpcpd"/>
+            <arg value="phpmd/phpmd"/>
+            <arg value="phploc/phploc"/>
+            <arg value="pdepend/pdepend"/>
+            <arg value="theseer/phpdox"/>
+        </exec>
     </target>
 
     <target name="prepare"
@@ -241,6 +237,8 @@
             <arg value="--configuration"/>
             <arg path="${basedir}/Tests/phpunit.xml"/>
             <arg line="--exclude-group online"/>
+            <arg value="--coverage-html"/>
+            <arg value="${basedir}/Tests/TestData/Coverage"/>
         </exec>
 
         <property name="phpunit.done" value="true"/>
