Change directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 /Tests/app/parameters.yml
 /Tests/vendor/
 /vendor
-Tests/app/cache
-Tests/app/logs
+src/Tests/app/cache
+src/Tests/app/logs
 composer.lock
 /.idea/
-Tests/TestData/Coverage
-Tests/TestData/root_path/
-!Tests/TestData/root_path/.gitkeep
+src/Tests/TestData/Coverage
+src/Tests/TestData/root_path/
+src/!Tests/TestData/root_path/.gitkeep
 /nbproject/private/
 /nbproject
 .DS_Store
 /build
 /cache.properties
+/vendor/
