Update package directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-/Tests/app/parameters.yml
-/Tests/vendor/
+/tests/app/parameters.yml
+/tests/vendor/
 /vendor
-Tests/app/cache
-Tests/app/logs
+tests/app/cache
+tests/app/logs
 composer.lock
 /.idea/
-Tests/TestData/Coverage
-Tests/TestData/root_path/
-!Tests/TestData/root_path/.gitkeep
+tests/TestData/Coverage
+tests/TestData/root_path/
+!tests/TestData/root_path/.gitkeep
 /nbproject/private/
 /nbproject
 .DS_Store
 /build
 /cache.properties
+/vendor/
